--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>What will you do today?</h1>
-    
+    <h2>To Do</h2>
+    <h3>Date: <span id="date"></span></h3>
     <input id="input-name" placeholder="name"/>
     <button onclick="showGreeting();">Submit</button>
     <div>
