fixed some issues with window.onload

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <title>To Do List</title>
 </head>
 <body>
+    <div class="container">
+        <div class="app">
+            <!-- <h3>To Do List <span id="date"></span></h3> -->
+            <h3>To Do List</h3>
+            <input id="input-todo" placeholder="Enter task"/>
+            <button id="add-button" onclick="addTodos();return false">Add</button>
+            <ul id="todo-list"></ul>
+        </div>
+    </div>
+   
     <!-- <div id="greeting-div">
         <h1 id="output"></h1>
         <input id="input-name" placeholder="Enter name"/>
         <button onclick="showGreeting();">Submit</button>
     </div> -->
-  
-    <div id="todo-div">
-        <h3>To Do for <span id="date"></span></h3>
-        <input id="input-todo" placeholder="Enter task"/>
-        <button id="add-button" onclick="addTodos();return false">Add</button>
-        <ul id="todo-list"></ul>
-    </div>
-  
     
     <script src="script.js"></script>
 </body>
