--- a/index.html
+++ b/index.html
@@ -10,19 +10,12 @@
 <body>
     <div class="container">
         <div class="app">
-            <!-- <h3>To Do List <span id="date"></span></h3> -->
-            <h3>To Do List</h3>
-            <input id="input-todo" placeholder="Enter task"/>
-            <button id="add-button" onclick="addTodos();return false">Add</button>
+            <h3>To Do List<span id="date"></span></h3>
+            <input type="text" id="input-todo" placeholder="Enter task"/>
+            <button type="submit" id="add-button">Add</button>
             <ul id="todo-list"></ul>
         </div>
     </div>
-   
-    <!-- <div id="greeting-div">
-        <h1 id="output"></h1>
-        <input id="input-name" placeholder="Enter name"/>
-        <button onclick="showGreeting();">Submit</button>
-    </div> -->
     
     <script src="script.js"></script>
 </body>
