simple todo done

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <div class="container">
         <div class="app">
-            <h3>To Do List<span id="date"></span></h3>
-            <input type="text" id="input-todo" placeholder="Enter task"/>
-            <button type="submit" id="add-button">Add</button>
+            <h2>To Do List<span id="date"></span></h2>
+            <div class="form-container">
+                <input type="text" id="input-todo" placeholder="Enter task"/>
+                <button type="submit" id="add-button">Add</button>
+            </div>
             <ul id="todo-list"></ul>
         </div>
     </div>
